<resources>
    <string name="app_name">Tippy</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="_24">24%</string>
    <string name="base">Base</string>
    <string name="base_amount">Base Amount</string>
    <string name="made_by_bhagyaraj">Made with ❤️ by Bhagyaraj</string>
    <string name="splitted_amounts">Per Person Amount :</string>
    <string name="enter_number_of_people">Enter Number Of People</string>
    <string name="split_bill">Split Bill</string>
</resources>