<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBaseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvBaseLabel"
        tools:text="@string/_24" />

    <TextView
        android:id="@+id/tvTipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvPercentLabel" />

    <TextView
        android:id="@+id/tvTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvTipLabel" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/base_amount"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBaseLabel"
        app:layout_constraintStart_toEndOf="@+id/tvBaseLabel"
        app:layout_constraintTop_toTopOf="@+id/tvBaseLabel" />

    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvPercentLabel"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tvPercentLabel" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipLabel"
        app:layout_constraintStart_toStartOf="@+id/tipSeekBar"
        app:layout_constraintTop_toTopOf="@+id/tvTipLabel"
        tools:text="19.96" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalLabel"
        app:layout_constraintStart_toStartOf="@+id/tvTipAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTotalLabel"
        tools:text="190.96" />

    <TextView
        android:id="@+id/tvFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="@string/made_by_bhagyaraj"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTipDescripton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tipSeekBar"
        app:layout_constraintStart_toStartOf="@+id/tipSeekBar"
        app:layout_constraintTop_toBottomOf="@+id/tipSeekBar"
        tools:text="Good" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/tvSplitHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/split_bill"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvSplitNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/enter_number_of_people"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSplitHeading" />

    <EditText
        android:id="@+id/etSplitPeople"
        android:layout_width="80sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="@+id/tvSplitNumber"
        app:layout_constraintStart_toEndOf="@+id/tvSplitNumber"
        app:layout_constraintTop_toTopOf="@+id/tvSplitNumber" />

    <TextView
        android:id="@+id/tvAmountForEach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/splitted_amounts"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvSplitNumber"
        app:layout_constraintTop_toBottomOf="@+id/tvSplitNumber" />

    <TextView
        android:id="@+id/tvSplitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvAmountForEach"
        app:layout_constraintEnd_toEndOf="@+id/etSplitPeople"
        app:layout_constraintTop_toTopOf="@+id/tvAmountForEach"
        tools:text="20" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmountForEach"
        app:srcCompat="@android:drawable/ic_menu_share"
        android:contentDescription="Copy button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:clickable="true"
        android:contentDescription="Share Button"
        app:layout_constraintBottom_toBottomOf="@+id/shareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shareButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCopyDrawable" />

</androidx.constraintlayout.widget.ConstraintLayout>